<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/juki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DD1212"
        android:text="@string/videotrailers"
        android:textColor="#FFFF"
        android:textSize="30sp"
        android:textStyle="italic" />
    <FrameLayout
        android:id="@+id/tucan"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <VideoView
            android:id="@+id/avengers"
            android:layout_width="match_parent"
            android:layout_height="220dp" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marvel_studios_avenges_endgame"
        android:textColor="#F000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/_2_080_789_views"
        android:textColor="#F000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/like2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/dislike" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/comp" />

        <ImageView
            android:id="@+id/Drawer"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/guardar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/califica_el_video"
        android:textAlignment="center"
        android:textColor="#F000"
        android:textSize="22sp"
        android:textStyle="italic" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="196dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/gato" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="GatoTrailers"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 M suscriptores"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/you" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="SUSCRIBIRSE"
            android:textAlignment="center"
            android:textColor="#F00"
            android:textSize="19sp" />
    </LinearLayout>

    <Button
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="drawer" />

</LinearLayout>